EM2 Bot Rewrite

--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "discord.js": "^11.1.0",
-    "express": "^4.15.3",
-    "pug": "^2.0.0-rc.2"
+    "express": "^4.15.3"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "npm run"
+    "test": npm start"
   },
   "repository": {
     "type": "git",
