EM2 Bot Rewrite

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": npm start"
+    "test": "npm start"
   },
   "repository": {
     "type": "git",
