--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,11 @@ aiohttp==1.0.5
 async-timeout==1.2.1
 chardet==3.0.4
 discord.py==0.16.8
+dj-database-url==0.4.2
+Django==1.11.2
+gunicorn==19.7.1
 multidict==2.1.6
+psycopg2==2.7.1
+pytz==2017.2
 websockets==3.3
+whitenoise==3.3.0
